--- a/memory.ipynb
+++ b/memory.ipynb
@@ -18,17 +18,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cd8a1b8c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Memory:\n",
+    "class SimpleMemory:\n",
     "    def __init__(self): self.memory = []\n",
     "        \n",
     "    def access(self, offset, size): return self.memory[offset:offset+size]\n",
-    "    def load(self, offset):         return access(offset, 32)\n",
-    "    def store(self, offset, size):  return 0"
+    "    def load  (self, offset):       return access(offset, 32)\n",
+    "    def store (self, offset, size): return self.memory[offset:len(value)] = value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82f25f39",
+   "metadata": {},
+   "source": [
+    "We need to add logic in order to calculate the exact gas of extending the memory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "00e53029",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Memory(SimpleMemory): pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0b48a8f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "memory = Memory()\n",
+    "memory.memory"
    ]
   }
  ],
