--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5ed44420",
+   "id": "7bfa968e",
    "metadata": {},
    "source": [
     "# Introduction"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9c558bc",
+   "id": "5ac727ec",
    "metadata": {},
    "source": [
     "## EVM\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3a76ab6",
+   "id": "78aa99e2",
    "metadata": {},
    "source": [
     "## Virutal Machine\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1ddac44",
+   "id": "b9188d1e",
    "metadata": {},
    "source": [
     "## Bytecode"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c50e18c7",
+   "id": "6c79b04c",
    "metadata": {},
    "source": [
     "The `bytecode` is simply a list of opcodes put together. So for example `604260005260206000F3` is bytecode.\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8bc765e",
+   "id": "b5bf0472",
    "metadata": {},
    "source": [
     "## Solidity, Vyper, Huff"
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1cc09ad",
+   "id": "09d6620f",
    "metadata": {},
    "source": [
     "Solidity, Vyper or even Huff are high-level programming language.\n",
@@ -88,12 +88,20 @@
     "\n",
     "Only after the compiler translates the Solidity file it can be executed by the EVM.\n",
     "\n",
+    "![title](static/solidity-compiler.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c59391c",
+   "metadata": {},
+   "source": [
     "If a programming language can be translated (compiled) to EVM bytecode it is said to `target` the EVM."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ba925835",
+   "id": "20c87a75",
    "metadata": {},
    "source": [
     "## Our goal"
@@ -101,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a685af3",
+   "id": "b99b1993",
    "metadata": {},
    "source": [
     "We will not build a compiler or a new programming language that targets the EVM here. Although this would certainly be interesting!\n",
