--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7bfa968e",
+   "id": "a73a3c4a",
    "metadata": {},
    "source": [
     "# Introduction"
@@ -10,19 +10,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ac727ec",
+   "id": "6b794f53",
    "metadata": {},
    "source": [
     "## EVM\n",
     "\n",
-    "We are going to build the EVM from scratch. The EVM or Ethereum Virtual Machine is the execution engine of Ethereum. \n",
+    "We are going to build the EVM from scratch. The EVM or \"Ethereum Virtual Machine\" is the execution engine of Ethereum. \n",
     "\n",
     "It is a `Virtual Machine` responsible for executing `bytecode`."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "78aa99e2",
+   "id": "ab9242df",
    "metadata": {},
    "source": [
     "## Virutal Machine\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9188d1e",
+   "id": "e9101ece",
    "metadata": {},
    "source": [
     "## Bytecode"
@@ -59,17 +59,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c79b04c",
+   "id": "2046970f",
    "metadata": {},
    "source": [
     "The `bytecode` is simply a list of opcodes put together. So for example `604260005260206000F3` is bytecode.\n",
     "\n",
-    "This bytecode is executed by the EVM."
+    "A Smart Contract is simply bytecode executed by the EVM."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b5bf0472",
+   "id": "b4fd54c6",
    "metadata": {},
    "source": [
     "## Solidity, Vyper, Huff"
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09d6620f",
+   "id": "6f926b25",
    "metadata": {},
    "source": [
     "Solidity, Vyper or even Huff are high-level programming language.\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c59391c",
+   "id": "f1483dc7",
    "metadata": {},
    "source": [
     "If a programming language can be translated (compiled) to EVM bytecode it is said to `target` the EVM."
@@ -101,7 +101,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20c87a75",
+   "id": "c223bcf8",
+   "metadata": {},
+   "source": [
+    "## Ethereum vs Bitcoin"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cd7486a",
+   "metadata": {},
+   "source": [
+    "What makes Ethereum \"special\" is that it is universal or `Turing complete`. Which means that any arbitrary program can be run on the EVM (we ignore gas and memory restrictions).\n",
+    "\n",
+    "Bitcoin also has scripting capabilities, called `bitcoin script`. But importantly, bitcoin script is **NOT** turing complete. There are programs that you simply can not implement in bitcoin script. That is not the case with the EVM."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a911f04",
    "metadata": {},
    "source": [
     "## Our goal"
@@ -109,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b99b1993",
+   "id": "545ce1cb",
    "metadata": {},
    "source": [
     "We will not build a compiler or a new programming language that targets the EVM here. Although this would certainly be interesting!\n",
@@ -117,6 +135,24 @@
     "We will build the EVM. A virutal machine that executes EVM bytecode.\n",
     "\n",
     "So something that takes in the input `604260005260206000F3` for example and executes that opcode by opcode."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "110dba1d",
+   "metadata": {},
+   "source": [
+    "### Outline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b868e294",
+   "metadata": {},
+   "source": [
+    "We will build the EVM from the bottom up. We will start with the `Stack`, move to `Memory` and `Storage`. Then we implement all EVM `opcodes`. In the end we will combine all these building blocks to create the `EVM`.\n",
+    "\n",
+    "Then we will use the EVM to execute some bytecode."
    ]
   }
  ],
