--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -154,6 +154,26 @@
     "\n",
     "Then we will use the EVM to execute some bytecode."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43519f67",
+   "metadata": {},
+   "source": [
+    "## Disclaimer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48f6bdf6",
+   "metadata": {},
+   "source": [
+    "I will not go for exact EVM equivalence. This is not the point of this project. This is about learning the core concepts of the EVM from first principles. If I think that some implementation detail is not necessary for understanding the core concepts I will leave them out.\n",
+    "\n",
+    "If you are looking for a understandable reference implemenation I highly recommend [Py-EVM](https://github.com/ethereum/py-evm).\n",
+    "\n",
+    "If you think I'm leaving out something interesting, please leave a comment below the video or create an issue or pull request on GitHub."
+   ]
   }
  ],
  "metadata": {
