--- a/memory.ipynb
+++ b/memory.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "cd8a1b8c",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
     "        \n",
     "    def access(self, offset, size): return self.memory[offset:offset+size]\n",
     "    def load  (self, offset):       return access(offset, 32)\n",
-    "    def store (self, offset, size): return self.memory[offset:len(value)] = value"
+    "    def store (self, offset, size): self.memory[offset:len(value)] = value"
    ]
   },
   {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "d29147a2",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "77ec910e",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
        "[]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
