--- a/02_stack.ipynb
+++ b/02_stack.ipynb
@@ -14,17 +14,9 @@
    "metadata": {},
    "source": [
     "A stack is a very simple data structure.\n",
-    "It is a basically a list with the following special property.\n",
+    "It is a basically a list with the following special property:\n",
     "\n",
     "You can only directly interact with the top of the stack. You can `push` a value to the top of the stack and you can `pop` a vaule from the stack."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d219ccb0",
-   "metadata": {},
-   "source": [
-    "![title](https://t3.ftcdn.net/jpg/00/86/06/84/360_F_86068474_Gmntyf4dZXTH9yWzyQCBaFmEvBQwDPiK.jpg)"
    ]
   },
   {
@@ -37,8 +29,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d219ccb0",
+   "metadata": {},
+   "source": [
+    "![title](https://t3.ftcdn.net/jpg/00/86/06/84/360_F_86068474_Gmntyf4dZXTH9yWzyQCBaFmEvBQwDPiK.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58f1150d",
+   "metadata": {},
+   "source": [
+    "The EVM stack has a maximum capacity of `1024`. Every value on the stack is a 256 bit value (32 bytes)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
+   "id": "ba5881e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAXIMUM_STACK_SIZE = 1024"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c565091a",
+   "metadata": {},
+   "source": [
+    "We also throw an exception if we try to pop a value of a stack that is empty."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "id": "102cacf7",
    "metadata": {},
    "outputs": [],
@@ -47,8 +73,13 @@
     "    def __init__(self): self.items = []\n",
     "    def __str__ (self): return \"\\n\".join(map(str, self.items[::-1]))\n",
     "        \n",
-    "    def push(self, value): self.items.append(value)    \n",
-    "    def pop (self)       : return self.items.pop()"
+    "    def push(self, value): \n",
+    "        if len(self.items) == MAXIMUM_STACK_SIZE-1: raise Exception(\"Stack overflow\")\n",
+    "        self.items.append(value)    \n",
+    "        \n",
+    "    def pop (self): \n",
+    "        if len(self.items) == 0: raise Exception(\"Stack underflow\")\n",
+    "        return self.items.pop()"
    ]
   },
   {
@@ -61,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "id": "aaaf2494",
    "metadata": {},
    "outputs": [],
