--- a/03_memory.ipynb
+++ b/03_memory.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "28a21e44",
+   "id": "17f8a2c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,10 +31,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c30235e",
+   "id": "377dc568",
    "metadata": {},
    "source": [
     "![title](static/memory.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "177c5d3e",
+   "metadata": {},
+   "source": [
+    "There are three memory opcodes that are important for us. One for loading and two for storing.\n",
+    "\n",
+    "`MLOAD` lets us load one `word` specified by an offset. A word is 32 bytes. \n",
+    "\n",
+    "`MSTORE` allows us to save one word to memory and `MSTORE8` allows us to save one byte to memory."
    ]
   },
   {
@@ -65,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "15bc19a2",
+   "id": "3c3c2d0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adfec8c8",
+   "id": "cd36c9b1",
    "metadata": {},
    "source": [
     "Lets add the gas expansion calculation to the Memory"
@@ -126,48 +138,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "86464c14",
+   "execution_count": 105,
+   "id": "da22a75f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "number = Number([0x12, 0x33])"
+    "number = Number([0x01, 0x02, 0x03, 0x04])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "1774d845",
+   "execution_count": 106,
+   "id": "e2e3cc03",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[18, 51]"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "number.bytes"
+    "memory.store(0, number.bytes);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ef1e772",
+   "metadata": {},
+   "source": [
+    "As explained in the beginning. The EVM only allows us to load an entire word, even if the value that we are looking for is shorter than a word. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "b1e6edcc",
+   "execution_count": 107,
+   "id": "6614131c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[18,\n",
-       " 51,\n",
-       " 0,\n",
-       " 0,\n",
+       "[1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 4,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -198,13 +207,12 @@
        " 0]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "memory.store(0, number.bytes)\n",
     "memory.load(0)"
    ]
   }
