--- a/storage.ipynb
+++ b/storage.ipynb
@@ -13,9 +13,25 @@
    "id": "6b581368",
    "metadata": {},
    "source": [
-    "The storage of a contract is represented as a `key`, `value` mapping.\n",
+    "The storage of a contract is represented as a `key`, `value` mapping. A value is 32 bytes.\n",
     "\n",
     "We represent the storage as a dictionary."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb3f263d",
+   "metadata": {},
+   "source": [
+    "![title](static/storage.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35b1d173",
+   "metadata": {},
+   "source": [
+    "source: https://docs.alchemy.com/docs/smart-contract-storage-layout"
    ]
   },
   {
