--- a/03_stack.ipynb
+++ b/03_stack.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "a02fe30b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "%run 02_number.ipynb"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d8809502",
    "metadata": {},
@@ -38,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58f1150d",
+   "id": "9bc90d8c",
    "metadata": {},
    "source": [
     "The EVM stack has a maximum capacity of `1024`. Every value on the stack is a 256 bit value (32 bytes)."
@@ -46,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "ba5881e0",
+   "execution_count": 42,
+   "id": "509e73ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c565091a",
+   "id": "133dac44",
    "metadata": {},
    "source": [
     "We also throw an exception if we try to pop a value of a stack that is empty."
@@ -64,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "id": "102cacf7",
    "metadata": {},
    "outputs": [],
@@ -75,7 +86,7 @@
     "        \n",
     "    def push(self, value): \n",
     "        if len(self.items) == MAXIMUM_STACK_SIZE-1: raise Exception(\"Stack overflow\")\n",
-    "        self.items.append(value)    \n",
+    "        self.items.append(Number(value))    \n",
     "        \n",
     "    def pop (self): \n",
     "        if len(self.items) == 0: raise Exception(\"Stack underflow\")\n",
@@ -92,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "id": "aaaf2494",
    "metadata": {},
    "outputs": [],
@@ -110,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "id": "8771e0a0",
    "metadata": {},
    "outputs": [
@@ -142,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "id": "41cf0942",
    "metadata": {},
    "outputs": [
@@ -168,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "id": "b1612ec9",
    "metadata": {},
    "outputs": [
