--- a/07_stop.ipynb
+++ b/07_stop.ipynb
@@ -1,17 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "32d03134",
+   "metadata": {},
+   "source": [
+    "# Stop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "896304a5",
+   "metadata": {},
+   "source": [
+    "Our first opcode. Stop is a very simple opcode. All it does is it halts execution."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f4c2d206",
+   "id": "4409f5b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add(evm):\n",
-    "    a, b = evm.stack.pop(), cpu.stack.pop()\n",
-    "    evm.stack.push(a+b)\n",
-    "    evm.pc += 1\n",
-    "    evm.gas_dec(3)"
+    "def stop(evm):\n",
+    "    evm.stop_flag = True"
    ]
   }
  ],
