--- a/evm.ipynb
+++ b/evm.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "554af289",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
-    "%run stack.ipynb\n",
-    "%run memory.ipynb\n",
-    "%run storage.ipynb\n",
-    "%run opcodes.ipynb\n",
-    "%run push.ipynb"
+    "%run 02_stack.ipynb\n",
+    "%run 03_memory.ipynb\n",
+    "%run 04_storage.ipynb\n",
+    "%run 05_opcodes.ipynb\n",
+    "%run 06_stop.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "67ef5ff6",
    "metadata": {},
    "outputs": [],
@@ -34,16 +34,19 @@
     "        self.program = program\n",
     "        self.gas     = gas\n",
     "        \n",
+    "        self.stop_flag = False\n",
+    "        \n",
     "    def peek(self): return self.program[self.pc]\n",
     "    \n",
     "    def gas_dec(self, amount):\n",
     "        if self.gas - amount < 0: \n",
-    "            raise Exception(f\"{self.gas} gas left and {amount} required\")\n",
+    "            raise Exception(\"out of gas\")\n",
     "        self.gas -= amount\n",
     "\n",
     "    \n",
     "    def should_execute_next_opcode(self):\n",
     "        if self.pc > len(self.program)-1: return False\n",
+    "        if self.stop_flag               : return False\n",
     "        \n",
     "        return True\n",
     "    \n",
@@ -53,7 +56,8 @@
     "            print(\"op: \", hex(op))\n",
     "            print(\"pc: \" , self.pc)\n",
     "\n",
-    "            \n",
+    "            if op == STOP: stop(self)\n",
+    "                \n",
     "            if op == PUSH1: _push(self, 1)\n",
     "        \n",
     "    def reset(self):\n",
