--- a/run.ipynb
+++ b/run.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "f89499a5",
+   "execution_count": 28,
+   "id": "363ef6eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "5f443641",
+   "execution_count": 29,
+   "id": "46af5be8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,14 +23,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "350aeb48",
+   "execution_count": 33,
+   "id": "9e6f7adf",
    "metadata": {},
    "outputs": [],
    "source": [
     "PROGRAM = [\n",
     "    PUSH1,\n",
     "    0x42,\n",
+    "    STOP,\n",
     "    PUSH1,\n",
     "    0x69\n",
     "]"
@@ -38,8 +39,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "61a9b117",
+   "execution_count": 34,
+   "id": "87ba7033",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,8 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "35f3613d",
+   "execution_count": 35,
+   "id": "7ecfb1ad",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +59,7 @@
      "text": [
       "op:  0x60\n",
       "pc:  0\n",
-      "op:  0x60\n",
+      "op:  0x0\n",
       "pc:  2\n"
      ]
     }
