--- a/05_storage.ipynb
+++ b/05_storage.ipynb
@@ -13,14 +13,14 @@
    "id": "6b581368",
    "metadata": {},
    "source": [
-    "The storage of a contract is represented as a `key`, `value` mapping. A value is 32 bytes.\n",
+    "The storage of a contract is  a mapping from a `key` to a `value`. \n",
     "\n",
-    "We represent the storage as a dictionary."
+    "The number of keys is for all practical purposes infinite. The value can be up to 32 bytes. Every value is initialized with a 0."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fb3f263d",
+   "id": "ad5500d9",
    "metadata": {},
    "source": [
     "![title](static/storage.png)"
@@ -28,15 +28,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35b1d173",
+   "id": "c36506db",
    "metadata": {},
    "source": [
     "source: https://docs.alchemy.com/docs/smart-contract-storage-layout"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "107d013f",
+   "metadata": {},
+   "source": [
+    "We will represent the storage as a dictionary."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "id": "c5b98bfc",
    "metadata": {},
    "outputs": [],
@@ -163,6 +171,35 @@
    ],
    "source": [
     "storage.load(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a856b2d3",
+   "metadata": {},
+   "source": [
+    "Reading a random storage that was not set to any value will return 0 and **not** throw an exception."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "2da37f26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "storage.load(42069)"
    ]
   }
  ],
