--- a/03_stack.ipynb
+++ b/03_stack.ipynb
@@ -1,17 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "a02fe30b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "%run 02_number.ipynb"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "d8809502",
    "metadata": {},
@@ -49,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bc90d8c",
+   "id": "73160a8c",
    "metadata": {},
    "source": [
     "The EVM stack has a maximum capacity of `1024`. Every value on the stack is a 256 bit value (32 bytes)."
@@ -58,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "509e73ad",
+   "id": "a95f8b9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "133dac44",
+   "id": "b1649f55",
    "metadata": {},
    "source": [
     "We also throw an exception if we try to pop a value of a stack that is empty."
@@ -75,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "id": "102cacf7",
    "metadata": {},
    "outputs": [],
@@ -86,7 +75,7 @@
     "        \n",
     "    def push(self, value): \n",
     "        if len(self.items) == MAXIMUM_STACK_SIZE-1: raise Exception(\"Stack overflow\")\n",
-    "        self.items.append(Number(value))    \n",
+    "        self.items.append(value)    \n",
     "        \n",
     "    def pop (self): \n",
     "        if len(self.items) == 0: raise Exception(\"Stack underflow\")\n",
