--- a/04_memory.ipynb
+++ b/04_memory.ipynb
@@ -1,17 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "4734dd0f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "%run number.ipynb"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e2d12443",
    "metadata": {},
@@ -31,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "174eb6d9",
+   "id": "1c9a1762",
    "metadata": {},
    "source": [
     "![title](static/memory.png)"
@@ -39,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f7025df",
+   "id": "d2b6f94b",
    "metadata": {},
    "source": [
     "There are three memory opcodes that are important for us. One for loading and two for storing.\n",
@@ -51,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 111,
    "id": "cd8a1b8c",
    "metadata": {},
    "outputs": [],
@@ -76,8 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "927f4657",
+   "execution_count": 112,
+   "id": "e597c63d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4f3e2d8",
+   "id": "5f5f079c",
    "metadata": {},
    "source": [
     "Lets add the gas expansion calculation to the Memory"
@@ -97,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 113,
    "id": "d29147a2",
    "metadata": {},
    "outputs": [],
@@ -128,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 114,
    "id": "77ec910e",
    "metadata": {},
    "outputs": [],
@@ -138,27 +127,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "0351422f",
+   "execution_count": 116,
+   "id": "4b6722f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "number = Number([0x01, 0x02, 0x03, 0x04])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "id": "386be61d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "memory.store(0, number.bytes);"
+    "memory.store(0, [0x01, 0x02, 0x03, 0x04]);"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f3718102",
+   "id": "de83d03e",
    "metadata": {},
    "source": [
     "As explained in the beginning. The EVM only allows us to load an entire word, even if the value that we are looking for is shorter than a word. "
@@ -166,8 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "8079046a",
+   "execution_count": 117,
+   "id": "70e11e32",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +186,7 @@
        " 0]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
