--- a/08_math.ipynb
+++ b/08_math.ipynb
@@ -2,27 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "40980a02",
+   "id": "34d60243",
    "metadata": {},
    "source": [
     "# Math"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0477448b",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "f4c2d206",
    "metadata": {},
    "outputs": [],
    "source": [
     "def add(evm):\n",
-    "    a, b = evm.stack.pop().value, cpu.stack.pop().value\n",
+    "    a, b = evm.stack.pop(), evm.stack.pop()\n",
     "    evm.stack.push(a+b)\n",
     "    evm.pc += 1\n",
     "    evm.gas_dec(3)"
@@ -30,16 +24,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "f947eaa7",
+   "execution_count": 9,
+   "id": "bcb8d037",
    "metadata": {},
    "outputs": [],
    "source": [
     "def mul(evm):\n",
-    "    a, b = evm.stack.pop().value, evm.stack.pop().value\n",
+    "    a, b = evm.stack.pop(), evm.stack.pop()\n",
     "    evm.stack.push(a*b)\n",
     "    evm.pc += 1\n",
     "    evm.gas_dec(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a6751266",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sub(evm):\n",
+    "    a, b = evm.stack.pop(), evm.stack.pop()\n",
+    "    evm.stack.push(a-b)\n",
+    "    evm.pc += 1\n",
+    "    evm.gas_dec(3)"
    ]
   }
  ],
