--- a/evm.ipynb
+++ b/evm.ipynb
@@ -2,22 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "id": "554af289",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
-    "%run 02_stack.ipynb\n",
-    "%run 03_memory.ipynb\n",
-    "%run 04_storage.ipynb\n",
-    "%run 05_opcodes.ipynb\n",
-    "%run 06_stop.ipynb"
+    "%run 03_stack.ipynb\n",
+    "%run 04_memory.ipynb\n",
+    "%run 05_storage.ipynb\n",
+    "%run 06_opcodes.ipynb\n",
+    "%run 07_stop.ipynb\n",
+    "%run 08_math.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "id": "67ef5ff6",
    "metadata": {},
    "outputs": [],
@@ -57,6 +58,9 @@
     "            print(\"pc: \" , self.pc)\n",
     "\n",
     "            if op == STOP: stop(self)\n",
+    "                \n",
+    "            if op == ADD: add(self)\n",
+    "\n",
     "                \n",
     "            if op == PUSH1: _push(self, 1)\n",
     "        \n",
