--- a/run.ipynb
+++ b/run.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "363ef6eb",
+   "execution_count": 57,
+   "id": "385e0b33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "46af5be8",
+   "execution_count": 58,
+   "id": "3c421fd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,24 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "9e6f7adf",
+   "execution_count": 59,
+   "id": "2a700e34",
    "metadata": {},
    "outputs": [],
    "source": [
     "PROGRAM = [\n",
     "    PUSH1,\n",
     "    0x42,\n",
-    "    STOP,\n",
     "    PUSH1,\n",
-    "    0x69\n",
+    "    0x69,\n",
+    "    ADD,\n",
+    "    STOP\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "87ba7033",
+   "execution_count": 60,
+   "id": "a289cbfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,8 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "7ecfb1ad",
+   "execution_count": 61,
+   "id": "2da92bf4",
    "metadata": {},
    "outputs": [
     {
@@ -59,8 +60,12 @@
      "text": [
       "op:  0x60\n",
       "pc:  0\n",
+      "op:  0x60\n",
+      "pc:  2\n",
+      "op:  0x1\n",
+      "pc:  4\n",
       "op:  0x0\n",
-      "pc:  2\n"
+      "pc:  5\n"
      ]
     }
    ],
