--- a/08_math.ipynb
+++ b/08_math.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "692083cd",
+   "id": "1f480aa8",
    "metadata": {},
    "source": [
     "# Math"
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ca9cbbdf",
+   "id": "85e5c505",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d5ae2f2d",
+   "id": "d5445b2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1498290",
+   "id": "19049261",
    "metadata": {},
    "source": [
     "One interesting note about how the EVM handles division by 0. Most other systems would throw an exception if you try to divide by 0. Not the EVM. It just returns 0.\n",
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "dafaeea9",
+   "id": "87a12cfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e21e751",
+   "id": "ee899429",
    "metadata": {},
    "source": [
     "Exactly like div but we use the absolute value for the both the denominator and numerator."
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec3f2107",
+   "id": "6192ed16",
    "metadata": {},
    "source": [
     "Small little helper function to determine the sign of a number."
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0ae41b91",
+   "id": "58fd8c35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "dded9e8c",
+   "id": "a9a541f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9f6b06ad",
+   "id": "20242524",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7909f569",
+   "id": "9d0004d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "420c2d78",
+   "id": "70f58af8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "343dc0c2",
+   "id": "333cb130",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b028838",
+   "id": "46b406ec",
    "metadata": {},
    "source": [
     "The gas cost for exp is dynamic. It is a function of how many bytes we need to represent the exponent in binary. This helper function calculates this."
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0e5860e",
+   "id": "67c5b254",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "07aef1a4",
+   "id": "d72b3512",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,9 +211,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e6c9c82a",
+   "metadata": {},
+   "source": [
+    "More informations about this rarely used opcode `signextend` [here](https://ethereum.stackexchange.com/questions/63062/evm-signextend-opcode-explanation)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "7a2907f2",
+   "execution_count": 37,
+   "id": "56ca70a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +231,7 @@
     "        testbit = b * 8 + 7\n",
     "        sign_bit = 1 << testbit\n",
     "        if x & sign_bit: result = x | (2**256 - sign_bit)\n",
-    "        else: result = x & (sign_bit - 1)\n",
+    "        else           : result = x & (sign_bit - 1)\n",
     "    else: result = x\n",
     "    \n",
     "    evm.stack.push(result)\n",
